--- a/lotgd.yml
+++ b/lotgd.yml
@@ -1,3 +1,3 @@
-entityNamespace: "LotGD\\Modules\\DragonKills\\"
+entityNamespace: "LotGD\\Modules\\DragonKills\\Models\\"
 subscriptionPatterns:
     - "/e\/lotgd\/dragon-kills\/kill/"
