Upgrade to and depend on core v0.1.0-alpha

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         }
     ],
     "require": {
-        "lotgd/core": "dev-master"
+        "lotgd/core": "0.1.0-alpha"
+    },
+    "config": {
+        "secure-http": false
     }
 }
