--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,17 @@
         {
             "name": "Austen McDonald",
             "email": "austen.mcdonald@gmail.com"
+        },
+        {
+            "name": "Basilius Sauter",
+            "email": "basilius.sauter@gmail.com"
         }
     ],
     "homepage": "https://github.com/lotgd/module-dragon-kills",
     "autoload": {
         "psr-4": {
-            "LotGD\\Modules\\DragonKills\\": "src/"
+            "LotGD\\Module\\DragonKills\\": "src/",
+            "LotGD\\Module\\DragonKills\\Tests\\": "tests/"
         }
     },
     "repositories": [
@@ -22,7 +27,14 @@
         }
     ],
     "require": {
-        "lotgd/core": "0.1.0-alpha"
+        "lotgd/core": "dev-feature/viewpoint-api as v0.3.3-alpha",
+        "lotgd/module-village": "dev-master as v0.3.3-alpha",
+        "lotgd/module-new-day": "dev-master as v0.3.3-alpha",
+        "lotgd/module-res-fight": "dev-master as v0.3.3-alpha"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.1|^5.1",
+        "phpunit/dbunit": "*"
     },
     "config": {
         "secure-http": false
