--- a/tests/datasets/module.yml
+++ b/tests/datasets/module.yml
@@ -1,27 +1,120 @@
 characters:
-    -
-        id: 1
-        name: "Gandalf"
-        displayName: "Gandalf the Grey"
-        maxHealth: 100
-        health: 90
-        level: 1
-        deletedAt:
-    -
-        id: 2
-        name: "Bilbo"
-        displayName: "Bilbo of the Shire"
-        maxHealth: 100
-        health: 90
-        level: 1
-        deletedAt:
+  -
+    id: 1
+    name: "Gandalf the White"
+    displayName: "Gandalf the White"
+    maxHealth: 200
+    health: 200
+    level: 15
+    deletedAt:
 scenes:
-    -
-        id: 1
-        title: "Village"
-        description: "You arrive in a village."
-        template: 'lotgd/test/village'
+  -
+    id: 1
+    title: "Village"
+    description: "The village square hustles and bustles. No one really notices that you're are standing there. You see various shops and businesses along main street. There is a curious looking rock to one side. On every side the village is surrounded by deep dark forest."
+    template: 'lotgd/module-village/village'
+  -
+    id: 2
+    title: "A fight!"
+    description: ""
+    template: "lotgd/module-res-fight/battle"
+  -
+    id: 3
+    title: "It is a new day!"
+    description: "It is a new day."
+    template: "lotgd/module-new-day/newDay"
+  -
+    id: 4
+    title: "Continue"
+    description: "Continue."
+    template: "lotgd/module-new-day/restoration"
+  -
+    id: 5
+    title: "Forest"
+    description: "The forest."
+    template: "lotgd/module-forest/forest"
+scene_connections:
+  -
+    directionality: 1
+    outgoingConnectionGroupName:
+    incomingConnectionGroupName:
+    outgoingScene: 3
+    incomingScene: 4
+  -
+    directionality: 0
+    outgoingConnectionGroupName: "lotgd/module-village/outside"
+    outgoingConnectionGroupName: "lotgd/module-forest/back"
+    outgoingScene: 1
+    incomingScene: 5
+scene_connection_groups:
+  -
+    scene: 1
+    name: "lotgd/module-village/marketsquare"
+    title: "The Marketsquare"
+  -
+    scene: 1
+    name: "lotgd/module-village/residential"
+    title: "Residential District"
+  -
+    scene: 1
+    name: "lotgd/module-village/outside"
+    title: "Outside"
+  -
+    scene: 5
+    name: "lotgd/module-village/fight"
+    title: "Fight"
+  -
+    scene: 5
+    name: "lotgd/module-village/back"
+    title: "Back"
 modules:
-    -
-        library: 'lotgd/test-module'
-        createdAt: 2016-08-22
+  -
+    library: 'lotgd/module-new-day'
+    createdAt: 2016-08-22
+  -
+    library: 'lotgd/module-village'
+    createdAt: 2016-08-22
+  -
+    library: 'lotgd/module-forest'
+    createdAt: 2016-08-22
+event_subscriptions:
+  -
+    pattern: "#h/lotgd/core/default-scene#"
+    class: "LotGD\\Module\\Village\\Module"
+    library: "lotgd/module-village"
+  -
+    pattern: "#h/lotgd/core/navigate-to/*#"
+    class: "LotGD\\Module\\NewDay\\Module"
+    library: "lotgd/module-new-day"
+  -
+    pattern: "#h/lotgd/module-new-day/after#"
+    class: "LotGD\\Module\\Res\\Fight\\Module"
+    library: "lotgd/module-res-fight"
+  -
+    pattern: "#h/lotgd/core/navigate-to/lotgd/module-res-fight/battle#"
+    class: "LotGD\\Module\\Res\\Fight\\Module"
+    library: "lotgd/module-res-fight"
+  -
+    pattern: "#h/*#"
+    class: "LotGD\\Module\\Res\\Fight\\Tests\\helpers\\EventRegistry"
+    library: "lotgd/module-res-fight"
+  -
+    pattern: "#h/lotgd/core/navigate-to/lotgd/module-forest/forest#"
+    class: "LotGD\\Module\\Forest\\Module"
+    library: "lotgd/module-forest"
+  -
+    pattern: "#h/lotgd/core/navigate-to/lotgd/module-forest/healer#"
+    class: "LotGD\\Module\\Forest\\Module"
+    library: "lotgd/module-forest"
+  -
+    pattern: "#h/lotgd/module-res-fight/battleOver#"
+    class: "LotGD\\Module\\Forest\\Module"
+    library: "lotgd/module-forest"
+  -
+    pattern: "#h/lotgd/module-forest/forest-navigation#"
+    class: "LotGD\\Module\\DragonKills\\Module"
+    library: "lotgd/module-dragon-kills"
+  -
+    pattern: "#h/lotgd/core/navigate-to/lotgd/module-dragon-kills/dragon#"
+    class: "LotGD\\Module\\DragonKills\\Module"
+    library: "lotgd/module-dragon-kills"
