--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "lotgd/core": "dev-feature/viewpoint-api as v0.3.3-alpha",
         "lotgd/module-village": "dev-master as v0.3.3-alpha",
         "lotgd/module-new-day": "dev-master as v0.3.3-alpha",
-        "lotgd/module-res-fight": "dev-master as v0.3.3-alpha"
+        "lotgd/module-res-fight": "dev-master as v0.3.3-alpha",
+        "lotgd/module-forest": "dev-master as v0.3.3-alpha"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.1|^5.1",
