Added dragon battle and test if it links correctly back to the village if player has lost.

--- a/lotgd.yml
+++ b/lotgd.yml
@@ -2,5 +2,6 @@ entityNamespace: "LotGD\\Module\\DragonKills\\Models\\"
 subscriptionPatterns:
   - "#h/lotgd/module-new-day/after#"
   - "#h/lotgd/module-forest/forest-navigation#"
+  - "#h/lotgd/module-res-fight/battleOver#"
   - "#h/lotgd/core/navigate-to/lotgd/module-dragon-kills/dragon#"
   - "/e\/lotgd\/dragon-kills\/kill/"
