--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "lotgd/module-dragon-kills",
     "description": "Track dragon kills in your realm.",
     "type": "lotgd-module",
-    "license": "AGPL-3.0",
+    "license": "AGPL-3.0-or-later",
     "authors": [
         {
             "name": "Austen McDonald",
@@ -23,21 +23,23 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "http://code.lot.gd"
+            "url": "https://raw.githubusercontent.com/lotgd/packages/master/build/packages.json"
         }
     ],
     "require": {
-        "lotgd/core": "dev-master as v0.3.3-alpha",
-        "lotgd/module-village": "dev-master as v0.3.3-alpha",
-        "lotgd/module-new-day": "dev-master as v0.3.3-alpha",
-        "lotgd/module-res-fight": "dev-master as v0.3.3-alpha",
-        "lotgd/module-forest": "dev-master as v0.3.3-alpha"
+        "lotgd/core": "^0.6.0-alpha",
+        "lotgd/module-village": "^0.6",
+        "lotgd/module-new-day": "^0.6",
+        "lotgd/module-res-fight": "^0.6",
+        "lotgd/module-forest": "^0.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.1|^5.1",
-        "phpunit/dbunit": "*"
+        "phpunit/phpunit": "*",
+        "symfony/yaml": "*"
     },
     "config": {
         "secure-http": false
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
