Updated module for compatibility with lotgd/core 0.6.0 API.
This commit introduces no changes on the module API itself, but is
now compatible with lotgd/core 0.6.0 API as well as the
corresponding modules.

--- a/lotgd.yml
+++ b/lotgd.yml
@@ -4,6 +4,6 @@ subscriptionPatterns:
   - "#h/lotgd/module-forest/forest-navigation#"
   - "#h/lotgd/module-res-fight/battleOver#"
   - "#h/lotgd/core/navigate-to/lotgd/module-dragon-kills/dragon#"
-  - "/e\/lotgd\/dragon-kills\/kill/"
+  - "#e/lotgd/module-dragon-kills/kill#"
 modelExtensions:
   - "LotGD\\Module\\DragonKills\\Models\\CharacterDragonKillExtension"
