--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         }
     ],
     "require": {
-        "lotgd/core": "dev-master as 0.6.0-alpha.3",
+        "lotgd/core": "0.6.0-alpha.3",
         "lotgd/module-village": "^0.6",
         "lotgd/module-new-day": "^0.6",
         "lotgd/module-res-fight": "^0.6",
