--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,12 @@
         }
     ],
     "require": {
-        "lotgd/core": "^0.6.0-alpha.3",
+        "lotgd/core": "^0.6.0-alpha.6",
         "lotgd/module-village": "^0.6",
         "lotgd/module-new-day": "^0.6",
         "lotgd/module-res-fight": "^0.6",
-        "lotgd/module-forest": "^0.6"
+        "lotgd/module-res-wealth": "^0.6",
+        "lotgd/module-forest": "^0.6.2"
     },
     "require-dev": {
         "phpunit/phpunit": "*",
